# InternalDebuggerMCP

./: .gitignore  CMakeLists.txt  InternalDebuggerMCP.sln  README.md
docs/: Architecture.md  MCP_Tools_Spec.md
scripts/: benchmark_aob_pattern.py  benchmark_signatures.py  package_release.ps1
src/DebuggerDLL/: CMakeLists.txt  InternalDebuggerDLL.vcxproj
src/DebuggerDLL/include/: AccessWatchManager.h  DebuggerProtocol.h  DebuggerService.h  Disassembler.h  IpcServer.h  MemoryReader.h  PatternGenerator.h  PatternScanner.h  SignatureGenerator.h  WatchManager.h
src/DebuggerDLL/src/: AccessWatchManager.cpp  DebuggerService.cpp  Disassembler.cpp  InvokeCallBridge.asm  IpcServer.cpp  MemoryReader.cpp  PatternGenerator.cpp  PatternScanner.cpp  SignatureGenerator.cpp  WatchManager.cpp  dllmain.cpp
src/McpServer/: README.md  launch.py  mcp.json.example  pyproject.toml
src/McpServer/internal_debugger_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/McpServer/mcp_server/: injection.py  package_layout.py  pipe_client.py  server.py  session_manager.py  tools.py
tests/integration/: test_auto_injection_requests.py  test_burst_pipe_requests.py  test_mcp_structured_tool_results.py
tests/unit/: test_auto_injection.py  test_injection_setup.py
tools/Injector/: CMakeLists.txt  Injector.vcxproj  main.cpp
tools/TestTarget/: CMakeLists.txt  TestTarget.vcxproj  main.cpp
